--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a {
 .text-input-field {
   padding: 11px 16px 11px 16px;
   border-radius: 5px;
-  border: 1px solid var(--font-dark-color);
+  border: 1px solid rgb(102, 102, 102);
   background-color: var(--background-grey-color);
   transition: border-color var(--transition-duration);
   outline: none;
@@ -238,6 +238,7 @@ a {
   margin-top: 50px;
   margin-bottom: 48px;
   max-width: 274px;
+  line-height: 30px;
 }
 
 /* Заголовок */
@@ -262,7 +263,9 @@ a {
 /* Слайдер */
 .animal-slider {
   margin-top: 130px;
-  position: relative;
+  position: relative; /* Устанавливаем контейнер как относительно позиционируемый */
+  max-width: 1020px; /* Ограничим максимальную ширину */
+  margin: 0 auto; /* Центрируем слайдер на странице */
 }
 
 .swiper {
@@ -321,14 +324,12 @@ a {
 }
 
 .swiper-button-prev {
-  left: 120px; 
+  left: -50px; /* Расположим левую кнопку на 50px за границей слайдера */
   color: var(--font-dark-color);
-  font-weight: 700;
-
-}
+  font-weight: 700;}
 
 .swiper-button-next {
-  right: 120px; 
+  right: -50px; /* Расположим правую кнопку на 50px за границей слайдера */
   color: var(--font-dark-color);
   font-weight: 700;
 }
