--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ a {
 .animal-slider {
   margin-top: 130px;
   position: relative; /* Устанавливаем контейнер как относительно позиционируемый */
-  max-width: 1020px; /* Ограничим максимальную ширину */
+  max-width: 1020px;
   margin: 0 auto; /* Центрируем слайдер на странице */
 }
 
